tests/snapshots/test_runner__tests__compiler__typecheck__type_annotation_array_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let x: [String] = "Hello"

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/type_annotation_array_1.kk:1:19
  │
1 │ let x: [String] = "Hello"
  │                   ^^^^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - [           | + String    |
    | -   String    |             |
    | - ]           |             |
    +---------------+-------------+
